Fixed issue with location aligning incorrectly if the name is too long.

--- a/src/phases/results/ResultContainer.css
+++ b/src/phases/results/ResultContainer.css
@@ -25,6 +25,7 @@
   font-family: "bebas_neuebold";
   font-weight: 500px;
   font-size: 32px;
+  text-align: left;
   float: left;
 }
 
